// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`renders a branch modal snapshot 1`] = `
<box
  alignItems="center"
  backgroundColor="#00000096"
  bottom={0}
  justifyContent="center"
  left={0}
  position="absolute"
  right={0}
  top={0}
  zIndex={20}
>
  <box
    backgroundColor="#0c1823"
    flexDirection="column"
    gap={1}
    maxWidth={108}
    padding={1}
    width="92%"
  >
    <box
      flexDirection="column"
      width="100%"
    >
      <box
        flexDirection="row"
        gap={1}
        justifyContent="space-between"
        width="100%"
      >
        <text
          fg="#e6edf3"
          wrapMode="none"
        >
          List
        </text>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            bg="#152838"
            fg="#e6edf3"
          >
             tab 
          </span>
          <span>
             switch view  
          </span>
          <span
            bg="#152838"
            fg="#e6edf3"
          >
             f 
          </span>
          <span>
             filters  
          </span>
          <span
            bg="#152838"
            fg="#e6edf3"
          >
             esc 
          </span>
          <span>
             close
          </span>
        </text>
      </box>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        Browse working tree changes, branches, and open pull requests.
      </text>
    </box>
    <box
      backgroundColor="#10202d"
      border={
        [
          "left",
        ]
      }
      borderColor="#29475c"
      customBorderChars={
        {
          "bottomLeft": "",
          "bottomRight": "",
          "bottomT": "",
          "cross": "",
          "horizontal": " ",
          "leftT": "",
          "rightT": "",
          "topLeft": "",
          "topRight": "",
          "topT": "",
          "vertical": "┃",
        }
      }
      flexDirection="column"
      gap={1}
      paddingBottom={1}
      paddingLeft={2}
      paddingRight={1}
      paddingTop={1}
      width="100%"
    >
      <box
        flexDirection="row"
        gap={2}
        justifyContent="space-between"
        width="100%"
      >
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          <span
            fg="#d4a72c"
          >
            base
          </span>
          <span>
             origin/main
          </span>
          <span>
              •  
          </span>
          <span
            fg="#9cdcfe"
          >
            head
          </span>
          <span>
             feature/tui
          </span>
        </text>
        <box
          flexDirection="row"
          gap={1}
        >
          <text
            wrapMode="none"
          >
            <span
              bg="#9cdcfe"
              fg="#0b1b26"
            >
               Branches 
            </span>
          </text>
          <text
            wrapMode="none"
          >
            <span
              bg="#152838"
              fg="#8ea4b5"
            >
               Commits 
            </span>
          </text>
        </box>
      </box>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        <span>
          2 local
        </span>
        <span>
            •  
        </span>
        <span>
          1 open PR
        </span>
        <span>
            •  
        </span>
        <span>
          1 remote
        </span>
        <span>
            •  filters 
        </span>
        <span
          bg="#9cdcfe"
          fg="#0b1b26"
        >
           working tree 
        </span>
        <span>
           
        </span>
        <span
          bg="#9cdcfe"
          fg="#0b1b26"
        >
           local 
        </span>
        <span>
           
        </span>
        <span
          bg="#9cdcfe"
          fg="#0b1b26"
        >
           PR 
        </span>
        <span>
           
        </span>
        <span
          bg="#152838"
          fg="#8ea4b5"
        >
           remote 
        </span>
      </text>
    </box>
    <box
      flexDirection="column"
      gap={1}
      width="100%"
    >
      <box
        backgroundColor="#2b332d"
        border={
          [
            "left",
          ]
        }
        borderColor="#d4a72c"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="column"
        gap={0}
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <box
          flexDirection="row"
          gap={1}
          justifyContent="space-between"
          width="100%"
        >
          <text
            fg="#e6edf3"
            wrapMode="none"
          >
            Working tree
          </text>
        </box>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          4 files  •  +18/-6
        </text>
      </box>
      <box
        backgroundColor="#324d5f"
        border={
          [
            "left",
          ]
        }
        borderColor="#67b7e1"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="column"
        gap={0}
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <box
          flexDirection="row"
          gap={1}
          justifyContent="space-between"
          width="100%"
        >
          <text
            fg="#e6edf3"
            wrapMode="none"
          >
            <span
              fg="#e6edf3"
            >
              feature/tui
            </span>
            <span>
               
            </span>
            <span
              bg="#9cdcfe"
              fg="#0b1b26"
            >
               HEAD 
            </span>
            <span>
               
            </span>
            <span
              bg="#0d2634"
              fg="#e6edf3"
            >
               CURRENT 
            </span>
          </text>
        </box>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          Madison Bullard, Pierre Bot  •  3 commits vs origin/main  •  4 files  •  +18/-6
        </text>
      </box>
      <box
        backgroundColor="#243a4a"
        border={
          [
            "left",
          ]
        }
        borderColor="#9cdcfe"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="column"
        gap={0}
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <box
          flexDirection="row"
          gap={1}
          justifyContent="space-between"
          width="100%"
        >
          <text
            fg="#e6edf3"
            wrapMode="none"
          >
            <span
              fg="#e6edf3"
            >
              main
            </span>
            <span>
               
            </span>
            <span
              bg="#152838"
              fg="#e6edf3"
            >
               DEFAULT 
            </span>
          </text>
        </box>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          Madison Bullard  •  0 commits vs origin/main  •  0 files  •  +0/-0
        </text>
      </box>
      <box
        backgroundColor="#173532"
        border={
          [
            "left",
          ]
        }
        borderColor="#3fb950"
        customBorderChars={
          {
            "bottomLeft": "",
            "bottomRight": "",
            "bottomT": "",
            "cross": "",
            "horizontal": " ",
            "leftT": "",
            "rightT": "",
            "topLeft": "",
            "topRight": "",
            "topT": "",
            "vertical": "┃",
          }
        }
        flexDirection="column"
        gap={0}
        paddingBottom={0}
        paddingLeft={2}
        paddingRight={1}
        paddingTop={0}
        width="100%"
      >
        <box
          flexDirection="row"
          gap={1}
          justifyContent="space-between"
          width="100%"
        >
          <text
            fg="#e6edf3"
            wrapMode="none"
          >
            <span
              fg="#3fb950"
            >
              Build TUI reviewer
            </span>
            <span
              fg="#8ea4b5"
            >
               (#42)
            </span>
          </text>
        </box>
        <text
          fg="#8ea4b5"
          wrapMode="none"
        >
          Madison Bullard, Pierre Bot  •  3 commits vs origin/main  •  +18/-6
        </text>
      </box>
    </box>
    <box
      backgroundColor="#10202d"
      border={
        [
          "left",
        ]
      }
      borderColor="#67b7e1"
      customBorderChars={
        {
          "bottomLeft": "",
          "bottomRight": "",
          "bottomT": "",
          "cross": "",
          "horizontal": " ",
          "leftT": "",
          "rightT": "",
          "topLeft": "",
          "topRight": "",
          "topT": "",
          "vertical": "┃",
        }
      }
      flexDirection="column"
      gap={1}
      paddingBottom={1}
      paddingLeft={2}
      paddingRight={1}
      paddingTop={1}
      width="100%"
    >
      <text
        fg="#e6edf3"
        wrapMode="none"
      >
        feature/tui
      </text>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        sha 1234567  •  diff vs origin/main  •  selected as head
      </text>
      <text
        fg="#8ea4b5"
        wrapMode="none"
      >
        <span
          bg="#152838"
          fg="#e6edf3"
        >
           enter 
        </span>
        <span>
           select  
        </span>
        <span
          bg="#152838"
          fg="#e6edf3"
        >
           b 
        </span>
        <span>
           set base  
        </span>
        <span
          bg="#152838"
          fg="#e6edf3"
        >
           h 
        </span>
        <span>
           set head  
        </span>
        <span
          bg="#152838"
          fg="#e6edf3"
        >
           w 
        </span>
        <span>
           working tree  
        </span>
        <span
          bg="#152838"
          fg="#e6edf3"
        >
           o 
        </span>
        <span>
           remote toggle  
        </span>
        <span
          bg="#152838"
          fg="#e6edf3"
        >
           f 
        </span>
        <span>
           filters
        </span>
      </text>
    </box>
  </box>
</box>
`;

exports[`renders an expanded file card snapshot 1`] = `
<box
  backgroundColor="#152838"
  border={
    [
      "left",
    ]
  }
  borderColor="#67b7e1"
  customBorderChars={
    {
      "bottomLeft": "",
      "bottomRight": "",
      "bottomT": "",
      "cross": "",
      "horizontal": " ",
      "leftT": "",
      "rightT": "",
      "topLeft": "",
      "topRight": "",
      "topT": "",
      "vertical": "┃",
    }
  }
  flexDirection="column"
  gap={1}
  paddingBottom={1}
  paddingLeft={2}
  paddingRight={1}
  paddingTop={1}
  width="100%"
>
  <box
    flexDirection="row"
    gap={1}
    justifyContent="space-between"
    width="100%"
  >
    <text
      fg="#e6edf3"
      wrapMode="none"
    >
      <span
        fg="#9cdcfe"
      >
        src/app.ts
      </span>
    </text>
    <text
      fg="#8ea4b5"
      wrapMode="none"
    >
      <span
        fg="#3fb950"
      >
        +3
      </span>
      <span>
         / 
      </span>
      <span
        fg="#ff7b72"
      >
        -1
      </span>
    </text>
  </box>
  <text
    fg="#8ea4b5"
    wrapMode="none"
  >
    <span
      bg="#9cdcfe"
      fg="#0b1b26"
    >
       CHANGED 
    </span>
    <span>
        
    </span>
    <span>
      typescript unified diff
    </span>
  </text>
  <box
    flexDirection="column"
    width="100%"
  >
    <box
      paddingLeft={1}
    >
      <box
        flexDirection="column"
        width="100%"
      >
        <box
          backgroundColor="#183041"
          width="100%"
        >
          <text
            fg="#d4a72c"
            wrapMode="word"
          >
            <span>
                   
            </span>
            <span
              fg="#e6edf3"
            >
              @@ -1,2 +1,3 @@
            </span>
          </text>
        </box>
        <box
          flexDirection="row"
          width="100%"
        >
          <box
            backgroundColor="#3a2021"
            width={5}
          >
            <text
              fg="#8ea4b5"
              wrapMode="none"
            >
               1
              <span
                fg="#ff7b72"
              >
                 -
              </span>
            </text>
          </box>
          <box
            backgroundColor="#2a1718"
            flexGrow={1}
          >
            <text
              fg="#e6edf3"
              wrapMode="word"
            >
              <span
                fg="#ff7b72"
              >
                const count = 0
              </span>
            </text>
          </box>
        </box>
        <box
          flexDirection="row"
          width="100%"
        >
          <box
            backgroundColor="#163526"
            width={5}
          >
            <text
              fg="#8ea4b5"
              wrapMode="none"
            >
               1
              <span
                fg="#3fb950"
              >
                 +
              </span>
            </text>
          </box>
          <box
            backgroundColor="#0f2619"
            flexGrow={1}
          >
            <text
              fg="#e6edf3"
              wrapMode="word"
            >
              <span
                fg="#3fb950"
              >
                const count = 1
              </span>
            </text>
          </box>
        </box>
        <box
          flexDirection="row"
          width="100%"
        >
          <box
            backgroundColor="#0d1822"
            width={5}
          >
            <text
              fg="#8ea4b5"
              wrapMode="none"
            >
               2
              <span
                fg="#8ea4b5"
              >
                  
              </span>
            </text>
          </box>
          <box
            backgroundColor="#0d1822"
            flexGrow={1}
          >
            <text
              fg="#e6edf3"
              wrapMode="word"
            >
              <span
                fg="#e6edf3"
              >
                console.log(count)
              </span>
            </text>
          </box>
        </box>
      </box>
    </box>
  </box>
</box>
`;
